--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "dependencies": {},
+  "dependencies": {
+    "advanced-calculator": "^1.1.0"
+  },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.36",
