chore: package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blank-typescript-project",
+  "name": "calculate-formula",
   "version": "1.0.0",
   "description": "",
   "type": "module",
